--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script defer src="https://unpkg.com/feather-icons"></script>
   <style>
-    /* Variabel warna */
     :root {
       --bg: #f8fafc;
       --text: #11131a;
@@ -39,7 +38,23 @@
       background: var(--bg);
       transition: background .4s ease, color .2s ease;
     }
-    /* Hero */
+    .toggle-dark {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: var(--card);
+      border: none;
+      border-radius: 50%;
+      width: 42px;
+      height: 42px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      box-shadow: 0 4px 15px var(--elev);
+      transition: background .3s ease;
+    }
+    .toggle-dark:hover { background: var(--grad1); color: white; }
     .hero {
       text-align: center;
       padding: 6rem 1.25rem 4rem;
@@ -48,7 +63,6 @@
     }
     .title { font-size: clamp(2rem, 5vw, 3.5rem); margin: 1rem 0 .5rem; font-weight: 700; }
     .subtitle { max-width: 720px; margin: 0 auto 2rem; }
-    /* Tentang Saya */
     .about-inner {
       display: flex;
       flex-wrap: wrap;
@@ -73,7 +87,6 @@
     .about-text { max-width: 500px; }
     .about-text h2 { margin-top: 0; font-size: 1.8rem; }
     .about-text p { opacity: 0.85; line-height: 1.6; }
-    /* Projects */
     .container { max-width: 1100px; margin: 0 auto; padding: 4rem 1.25rem; }
     .section-title { text-align: center; font-size: clamp(1.4rem, 3vw, 2rem); margin-bottom: 2rem; }
     .grid { display: grid; gap: 1.25rem; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); }
@@ -88,9 +101,39 @@
     .thumb { width: 100%; height: 180px; object-fit: cover; display: block; }
     .content { padding: 1.1rem 1rem 1.2rem; }
     .content h3 { margin: .2rem 0 .35rem; font-size: 1.1rem; }
+    .contact {
+      text-align: center;
+      padding: 3rem 1.25rem;
+      background: linear-gradient(135deg, var(--grad1), var(--grad2));
+      color: white;
+    }
+    .contact a {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background: white;
+      color: var(--grad1);
+      border-radius: 25px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: transform .3s ease, box-shadow .3s ease;
+    }
+    .contact a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: var(--muted);
+      border-top: 1px solid var(--border);
+    }
   </style>
 </head>
 <body>
+  <button class="toggle-dark" onclick="document.body.classList.toggle('dark')" title="Toggle Dark Mode">
+    <i data-feather="moon"></i>
+  </button>
   <header class="hero">
     <h1 class="title">Halo, Saya Galang</h1>
     <p class="subtitle">Selamat datang di portfolio saya yang modern dan interaktif.</p>
@@ -121,5 +164,16 @@
       </div>
     </div>
   </section>
+  <section class="contact">
+    <h2>Hubungi Saya</h2>
+    <p>Ingin bekerja sama atau bertanya? Klik tombol di bawah untuk chat langsung via WhatsApp.</p>
+    <a href="https://wa.me/6282124643404" target="_blank">💬 Chat via WhatsApp</a>
+  </section>
+  <footer>
+    © 2025 Galang.All Rights Reserved
+  </footer>
+  <script>
+    feather.replace();
+  </script>
 </body>
 </html>
